// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`horizontally resizable text area 1`] = `
<TextArea
  aria-label="horizontal resize textarea"
  onChange={[MockFunction]}
  required={true}
  resizeOrientation="horizontal"
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="horizontal resize textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="horizontal"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="horizontal resize textarea"
      className="pf-c-form-control pf-m-resize-horizontal"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`invalid text area 1`] = `
<TextArea
  aria-label="invalid textarea"
  onChange={[MockFunction]}
  required={true}
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="invalid textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="invalid textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`simple text input 1`] = `
<TextArea
  aria-label="simple textarea"
  onChange={[MockFunction]}
  value="test textarea"
>
  <TextArea
    aria-label="simple textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="simple textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area error 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="validated textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area success 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="success"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="success"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="validated textarea"
      className="pf-c-form-control pf-m-success"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area warning 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="warning"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="warning"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="validated textarea"
      className="pf-c-form-control pf-m-warning"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`vertically resizable text area 1`] = `
<TextArea
  aria-label="vertical resize textarea"
  onChange={[MockFunction]}
  resizeOrientation="vertical"
  value="test textarea"
>
  <TextArea
    aria-label="vertical resize textarea"
    className=""
    innerRef={null}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="vertical"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="vertical resize textarea"
      className="pf-c-form-control pf-m-resize-vertical"
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;
